# sql-simple-agent

./: Dockerfile  README.md  functional.py  main.py  mock_database.py  prompts.py  pyproject.toml  research.ipynb  tools.py
